<resources>
    <string name="app_name">FarmGate</string>
    <string name="farm_gate">Farm Gate</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="johndoe07_email_com">johndoe07@email.com</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account_login">Already have an account? <b>Login</b></string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? <b>Sign Up</b></string>
    <string name="menu">Menu</string>
    <string name="ukulima_bora">Ukulima Bora</string>
    <string name="look_up">Look Up</string>
    <string name="soil_preparation">Soil Preparation</string>
    <string name="watering">Watering</string>
    <string name="fertilizers">Fertilizers</string>
    <string name="diseases">Diseases</string>
    <string name="manage_your_farm">Manage Your Farm</string>
    <string name="my_farm">My Farm</string>
    <string name="crops">Crops</string>
    <string name="harvesting">Harvesting</string>
    <string name="livestock">Livestock</string>
    <string name="weather">Weather</string>
    <string name="_21_c">21°C</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="precipitation">Precipitation</string>
    <string name="temperature">Temp</string>
    <string name="contact">Contact</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="log_out">Log Out</string>
    <string name="phone">Phone</string>
    <string name="profile">Profile</string>
    <string name="personal_information">Personal Information</string>
    <string name="john_doe">John Doe La Doe</string>
    <string name="number_of_farms">Number of farms</string>
    <string name="number_of_animals">Number of Animals</string>
    <string name="johndoe_email_com">johndoe@email.com</string>
    <string name="faqs">FAQS</string>
    <string name="name">Name:</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="farm_hire_equipment">Farm Hire Equipment</string>
    <string name="drone_spraying">Drone Spraying</string>
    <string name="drone_mapping">Drone Mapping</string>
    <string name="farm_machinery">Farm Machinery</string>
    <string name="api_key">ae15faf6c070598d0af766994094815c</string>
    <string name="coming_soon">Coming Soon :)</string>
    <string name="financing">Financing</string>
    <string name="load_wallet">Load Wallet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="made_by_vince_tech">Made by vince_tech</string>
    <string name="ksh">Ksh</string>
    <string name="purchase_amount">Purchase Amount</string>
    <string name="product_purchase_details">Product Purchase details</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="payment_progress">Payment Progress</string>
    <string name="_0_0">0.0</string>
    <string name="deposit_money">Deposit Money</string>
    <string name="overview">Overview</string>
    <string name="transactions">Transactions</string>
    <string name="transact">Transact</string>
    <string name="operations">Operations</string>
    <string name="withdraw_money">Withdraw Money</string>
    <string name="wallet_to_wallet">Wallet to Wallet</string>
    <string name="send_to_bank">Send to Bank</string>
    <string name="wallet_home">Wallet Home</string>
    <string name="app_home">App Home</string>
    <string name="send_money">Send Money</string>
    <string name="farm_inputs">Farm Inputs</string>
    <string name="good_evening">Good Evening</string>
    <string name="current_wallet_balance">Current Wallet Balance</string>
    <string name="send_money_from_mobile_wallet">Send money from Mobile Wallet</string>
    <string name="top_up_wallet_from_mobile_money">Top up wallet from Mobile Money</string>
    <string name="amount">Amount</string>
    <string name="vince">Vince</string>
    <string name="add_farm">Add Farm</string>
    <string name="farm_name">Farm Name</string>
    <string name="location">Location</string>
    <string name="_0">0</string>
    <string name="harvesting_dates">Harvesting Dates</string>
    <string name="farm_location">Farm Location</string>
    <string name="eg_kitale">eg...Kitale</string>
    <string name="enter_farm_name_of_choice">Enter farm name of choice</string>
    <string name="withdraw_from_crypto">Withdraw from Crypto</string>
    <string name="send_to_crypto">Send to Crypto</string>
    <string name="edu_corner">Edu Corner</string>
</resources>
