<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Login">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/farm_gate"
        android:layout_centerHorizontal="true"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:src="@drawable/car" />
    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_below="@+id/imageView"
        android:layout_marginStart="15dp"
        android:textSize="21sp"
        android:padding="10dp"
        android:textColor="@color/orangeRed"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginStart="40dp"
        android:layout_below="@+id/loginText"
        android:textSize="18sp"
        android:textColor="@color/forestGreen"
        android:fontFamily="times"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/emailText"
        android:layout_marginStart="30dp"
        android:background="@drawable/custom_input"
        android:hint="@string/johndoe07_email_com"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/passText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginStart="40dp"
        android:layout_below="@+id/emailAddress"
        android:textSize="18sp"
        android:textColor="@color/forestGreen"
        android:fontFamily="times"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/passText"
        android:layout_marginStart="30dp"
        android:background="@drawable/custom_input"
        android:hint="@string/enter_your_password"
        android:gravity="center"
        />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_shape"
        android:fontFamily="sans-serif"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/signUpLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_sign_up"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:textStyle="italic"
        />

</RelativeLayout>