<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/farm_gate"
        android:layout_centerHorizontal="true"
        />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:src="@drawable/farmer1"
        />
    <TextView
        android:id="@+id/signUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_below="@+id/logo"
        android:layout_marginStart="15dp"
        android:textSize="21sp"
        android:textColor="@color/orangeRed"
        android:textStyle="bold"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/loginLink"
        android:layout_below="@+id/signUpText">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fullNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name"
                android:layout_marginStart="40dp"
                android:textSize="18sp"
                android:textColor="@color/forestGreen"
                android:fontFamily="times"
                android:textStyle="bold"
                />
            <EditText
                android:id="@+id/fullName"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:inputType="text"
                android:hint="Enter your full Name"
                android:layout_marginStart="30dp"
                android:background="@drawable/custom_input"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/emailAddressText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_marginStart="40dp"
                android:textSize="18sp"
                android:textColor="@color/forestGreen"
                android:fontFamily="times"
                android:textStyle="bold"
                />
            <EditText
                android:id="@+id/emailAddress"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:background="@drawable/custom_input"
                android:hint="@string/johndoe07_email_com"
                android:inputType="textEmailAddress"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/passwordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:layout_marginStart="40dp"
                android:textSize="18sp"
                android:textColor="@color/forestGreen"
                android:fontFamily="times"
                android:textStyle="bold"
                />
            <EditText
                android:id="@+id/password"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:background="@drawable/custom_input"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/confirmPasswordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password"
                android:layout_marginStart="40dp"
                android:textSize="18sp"
                android:textColor="@color/forestGreen"
                android:fontFamily="times"
                android:textStyle="bold"
                />
            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:background="@drawable/custom_input"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/phoneText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Phone"
                android:layout_marginStart="40dp"
                android:textSize="18sp"
                android:textColor="@color/forestGreen"
                android:fontFamily="times"
                android:textStyle="bold"
                />
            <EditText
                android:id="@+id/phone"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:background="@drawable/custom_input"
                android:hint="Enter Phone number"
                android:inputType="phone"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/farmName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Farm Name"
                android:layout_marginStart="40dp"
                android:textSize="18sp"
                android:textColor="@color/forestGreen"
                android:fontFamily="times"
                android:textStyle="bold"
                />
            <EditText
                android:id="@+id/farmNameEditText"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:background="@drawable/custom_input"
                android:hint="@string/enter_farm_name_of_choice"
                android:inputType="text"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/farmLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/farm_location"
                android:layout_marginStart="40dp"
                android:textSize="18sp"
                android:textColor="@color/forestGreen"
                android:fontFamily="times"
                android:textStyle="bold"
                />
            <EditText
                android:id="@+id/farmLocationEditText"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:background="@drawable/custom_input"
                android:hint="@string/eg_kitale"
                android:inputType="text"
                android:gravity="center"
                />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_shape"
                android:text="@string/sign_up"
                android:layout_marginStart="80dp"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:textColor="@color/white"
                />
        </LinearLayout>
    </ScrollView>
    <TextView
        android:id="@+id/loginLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account_login"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:textStyle="italic"
        />

</RelativeLayout>